1.0.0 -

- TI-16   Should handle case where taskwarrior hook is used before timew
          (thanks to Aaron Curtis).
- timew 0.9.5~alpha install bug
          (thanks to Gordon Ball).
- Improved out-of-source build for themes, holidays
          (thanks to Kent R. Spillner).

------ current release ---------------------------

0.9.5.alpha (2016-06-20) -

- TD-49   Log when file management fails
          (thanks to Ben Boeckel).
- TD-115  Throw error when config file is missing or not readable
          (thanks to Jelle van der Waa).
- TI-2    Two line tags causes false entry in database
          (thanks to Sebastian Uharek).
- TI-3    The month report shows multi-days current task truncated
          (thanks to Tomas Babej).
- TI-4    The 'timew' command considers only the last interval
          (thanks to Tomas Babej).
- TI-5    Unicode tags not working.
          (thanks to Sergey Trofimov).
- TI-6    Exception after shortening task.
          (thanks to Sergey Trofimov).
- TI-7    Stop command shouldn't interrupt unrelated tags.
          (thanks to Sergey Trofimov).
- TI-8    Only the day's last interval is considered in the month report
          (thanks to Tomas Babej).
- Added 'continue' command.
- Added 'diagnostics' command.
- Added 'export' command.
- Added 'extensions' command.
- Added 'help' command.
- Added 'start' command.
- Added 'stop' command.
- Added 'tags' command.
- Integrated libshared.git.
- Colored tags supported.
- Added Taskwarrior hook script to integrate Timewarrior.
- Added support for the ':debug' and :quiet hints.
- Added support for the :day, :week, :month, :quarter and :year hints.
- Added 'track' command.
- Added 'cancel' command.
- Added 'config' command.
- Added 'tag' command.
- Added 'untag' command.
- Added 'shorten' command.

Design completed 2016-03-13
Project started  2015-11-29

------ start -----------------------------------